# compute3Dphysics

./: CMakeLists.txt
include/gameLayer/: camera.h  mesh.h  model.h  physics.h  shader.h
resources/: compute.glsl  instancedShader.frag  instancedShader.vert  shader.vert
src/gameLayer/: Shader.cpp  camera.cpp  gameLayer.cpp  mesh.cpp  model.cpp  physics.cpp  profiler.cpp
src/platform/: glfwMain.cpp
